--- a/HYNewNest/Features(主代码)/WalletComponent/BuyECoinGuide(买币指南)/Controller/HYBuyECoinGuideVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/BuyECoinGuide(买币指南)/Controller/HYBuyECoinGuideVC.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -26,25 +27,25 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xlr-2z-Nh3">
                     <rect key="frame" x="0.0" y="44" width="414" height="55"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="55" id="gDN-lc-LBG"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vek-Ur-l6d">
                     <rect key="frame" x="0.0" y="99" width="414" height="93"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="93" id="QYI-kh-3lh"/>
                     </constraints>
                 </view>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hWm-j0-Qfp">
-                    <rect key="frame" x="10" y="192" width="394" height="704"/>
+                    <rect key="frame" x="15" y="192" width="384" height="704"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="1ZL-xo-a8e"/>
                     </connections>
                 </scrollView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ofa-O1-gGc" customClass="CNTwoStatusBtn">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ofa-O1-gGc" customClass="CNTwoStatusBtn">
                     <rect key="frame" x="15" y="782" width="167" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="ZXE-Eh-Q6k"/>
@@ -56,7 +57,7 @@
                         <action selector="didTapRechargeECoin:" destination="-1" eventType="touchUpInside" id="3ht-17-6OF"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b4Z-so-Z5b" customClass="CNTwoStatusBtn">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b4Z-so-Z5b" customClass="CNTwoStatusBtn">
                     <rect key="frame" x="232" y="782" width="167" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="BNs-eW-5o7"/>
@@ -69,6 +70,7 @@
                     </connections>
                 </button>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Ofa-O1-gGc" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="15" id="AnX-xz-z2h"/>
@@ -81,15 +83,19 @@
                 <constraint firstItem="b4Z-so-Z5b" firstAttribute="leading" secondItem="Ofa-O1-gGc" secondAttribute="trailing" constant="50" id="afv-Bk-uER"/>
                 <constraint firstItem="hWm-j0-Qfp" firstAttribute="top" secondItem="Vek-Ur-l6d" secondAttribute="bottom" id="h3D-LG-BGe"/>
                 <constraint firstItem="Xlr-2z-Nh3" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="hVu-QU-4jY"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="hWm-j0-Qfp" secondAttribute="trailing" constant="10" id="k6m-6J-bSc"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="hWm-j0-Qfp" secondAttribute="trailing" constant="15" id="k6m-6J-bSc"/>
                 <constraint firstItem="Vek-Ur-l6d" firstAttribute="top" secondItem="Xlr-2z-Nh3" secondAttribute="bottom" id="oII-cA-pOy"/>
                 <constraint firstItem="Vek-Ur-l6d" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="qaX-b1-lVL"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="Ofa-O1-gGc" secondAttribute="bottom" constant="30" id="u8Z-88-f4b"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Vek-Ur-l6d" secondAttribute="trailing" id="vmA-RJ-S5g"/>
-                <constraint firstItem="hWm-j0-Qfp" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="10" id="zxF-l4-pvN"/>
+                <constraint firstItem="hWm-j0-Qfp" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="15" id="zxF-l4-pvN"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="128" y="-66"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
