--- a/HYNewNest/Features(主代码)/NewUsrMissionComponent/Controller/BYNewUsrMissionVC.xib
+++ b/HYNewNest/Features(主代码)/NewUsrMissionComponent/Controller/BYNewUsrMissionVC.xib
@@ -59,6 +59,7 @@
                             <subviews>
                                 <imageView clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="h5优惠列表" translatesAutoresizingMaskIntoConstraints="NO" id="UUw-xu-Myx">
                                     <rect key="frame" x="15" y="16" width="384" height="128"/>
+                                    <gestureRecognizers/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="128" id="JCS-uA-lNO"/>
                                     </constraints>
@@ -68,6 +69,9 @@
                                             <integer key="value" value="10"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <outletCollection property="gestureRecognizers" destination="FiH-Ag-bs8" appends="YES" id="v18-wz-3yR"/>
+                                    </connections>
                                 </imageView>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="_rule" translatesAutoresizingMaskIntoConstraints="NO" id="LLF-Np-Ouh">
                                     <rect key="frame" x="349" y="32" width="50" height="22.5"/>
@@ -1208,6 +1212,11 @@ VIP私享会</string>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="31.884057971014496" y="254.46428571428569"/>
         </view>
+        <tapGestureRecognizer id="FiH-Ag-bs8">
+            <connections>
+                <action selector="didTapRuleBanner:" destination="-1" id="bnb-SY-8VA"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
         <image name="_alarm clock" width="18" height="18"/>
